# webify-mcp

./: .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml  webify.py
docs/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.zh-CN.md
