[project]
name = "webify"
version = "1.0.0"
description = "Semantic web graph for AI coding agents — 74% cheaper than full page reads"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "GrapeRoot", email = "support@graperoot.dev"},
]
keywords = ["mcp", "claude", "web", "graph", "semantic", "retrieval", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mcp = ["mcp>=1.3.0"]

[project.urls]
Homepage = "https://github.com/graperoot/webify"
Issues = "https://github.com/graperoot/webify/issues"

[project.scripts]
webify = "webify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
