[project]
name = "webify-mcp"
version = "0.0.1"
description = "Adaptive web research for AI coding agents — 91% of Deep Research quality at 5% cost"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "GrapeRoot", email = "support@graperoot.dev"},
]
keywords = ["mcp", "claude", "web", "graph", "semantic", "retrieval", "ai", "search", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/kunal12203/webify-mcp"
Issues = "https://github.com/kunal12203/webify-mcp/issues"

[project.scripts]
webify-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webify.py", "mcp_server.py"]

[tool.hatch.build.targets.sdist]
include = ["webify.py", "mcp_server.py", "README.md", "LICENSE", "pyproject.toml"]
